Fixed calendar grid size and gaps

--- a/src/app/component/user/components/profile/calendar/calendar.component.scss
+++ b/src/app/component/user/components/profile/calendar/calendar.component.scss
@@ -49,18 +49,19 @@ $bp-largest: 1440px;
 
     .days {
       display: grid;
-      grid-template-columns: repeat(7, 34.6px);
+      grid-template-columns: repeat(7, 32px);
+      grid-column-gap: 4px;
       text-align: center;
-      margin: 0 9px 0 10px;
+      margin: 0 7px;
       font-size: 11px;
 
       .days-name {
         margin: 0;
         font-family: 'Montserrat', sans-serif;
         font-weight: 600;
-        font-size: 13px;
+        font-size: 11px;
         line-height: 16px;
-        color: #bebebe;
+        color: #878787;
       }
 
       .current-day-name {
@@ -71,12 +72,17 @@ $bp-largest: 1440px;
 
   .middle {
     padding-bottom: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .calendar-grid {
       display: grid;
-      grid-template-columns: repeat(7, 34px);
-      grid-auto-rows: 32px;
-      margin: 8px 0 0 14px;
+      grid-template-columns: repeat(7, 24px);
+      grid-auto-rows: 24px;
+      grid-column-gap: 12px;
+      grid-row-gap: 8px;
+      margin-top: 12px;
       font-family: 'Montserrat', sans-serif;
       font-size: 13px;
       line-height: 16px;
@@ -84,7 +90,9 @@ $bp-largest: 1440px;
       text-align: center;
 
       .calendar-grid-day {
-        padding: 7px 1px 0 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         cursor: pointer;
       }
 
@@ -100,7 +108,6 @@ $bp-largest: 1440px;
         background-color: #13aa57;
         border-radius: 50%;
         background-repeat: no-repeat;
-        background-position: center;
         color: #fff;
       }
 
@@ -108,7 +115,6 @@ $bp-largest: 1440px;
         background-color: #056b33;
         border-radius: 50%;
         background-repeat: no-repeat;
-        background-position: center;
         color: #fff;
       }
 
